clusters/home/apps/hajimari/release.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hajimari
